package com.english.learning.enums;

public enum ContentStatus {
    DRAFT,
    PUBLISHED,
    ARCHIVED
}
