package com.english.learning.enums;

public enum LessonType {
    AUDIO,
    VIDEO
}
