package com.english.learning.enums;

public enum PracticeType {
    SPEAKING,
    LISTENING
}
