package com.english.learning.enums;

public enum SlideshowPosition {
    HOME
}
