package com.english.learning.enums;

public enum SpeakingResultType {
    BEST,    // Kết quả tốt nhất (điểm cao nhất)
    CURRENT  // Kết quả hiện tại (lần nói mới nhất, bị ghi đè)
}
